# plugins

binder/: README.md  pubspec.yaml
binder/android/: settings.gradle
binder/binder_test/: .gitignore  Makefile  client.cc  client.h  install.sh  main.cc
binder/example/: README.md
binder/example/lib/: main.dart
binder/example/linux/: app_configuration.mk  window_configuration.cc
binder/example/test/: widget_test.dart
binder/ios/: binder.podspec
binder/ios/Classes/: SwiftBinderPlugin.swift
binder/lib/: binder.dart
binder/linux/: Makefile  binder_plugin.cc  binder_plugin.h  plugin_configuration.mk
binder/macos/: binder.podspec
binder/macos/Classes/: BinderPlugin.swift
binder/test/: binder_test.dart
binder_channel/: .flutter-plugins  .flutter-plugins-dependencies  .metadata  .packages  README.md  pubspec.yaml
binder_channel/.dart_tool/: package_config.json
binder_channel/linux/: Makefile
binder_channel/plugins/binder/linux/binder-for-linux-kernel-5/src/libs/: CMakeLists.txt
dart_extension/: README.md  build.sh  clean.sh  sample_extension.cc  sample_synchronous_extension.dart  test_sample_synchronous_extension.dart
ffi/: ffi_test_dynamic_library.cc  pubspec.yaml  sample_ffi_bitfield.dart  sample_ffi_dynamic_library.dart
ffi/async/: sample_async_callback.dart
ffi/resource_management/: unmanaged_sample.dart
ffi_demo/: .packages  build.sh  coordinate.dart  dylib_utils.dart  ffi_test_functions.cc  ffi_test_functions_vmspecific.cc  sample_ffi_bitfield.dart  sample_ffi_data.dart  sample_ffi_dynamic_library.dart  sample_ffi_functions.dart  sample_ffi_functions_callbacks.dart  sample_ffi_functions_structs.dart  sample_ffi_structs.dart  samples_test.dart
ffi_demo/.dart_tool/: package_config.json
ffi_demo/async/: async_test.dart  sample_async_callback.dart  sample_native_port_call.dart
ffi_demo/include/: dart_api.h  dart_native_api.h
ffi_demo/platform/: globals.h
ffi_demo/platform/platform/: floating_point.h
ffi_demo/resource_management/: pool.dart  pool_isolate_shutdown_sample.dart  pool_sample.dart  pool_zoned_sample.dart  unmanaged_sample.dart
ipc/: .metadata  README.md  pubspec.yaml
ipc/lib/: ipc.dart
ipc/test/: ipc_test.dart
ipc_0/: .metadata  pubspec.yaml
ipc_0/android/: build.gradle
ipc_0/example/: pubspec.yaml
ipc_0/ios/Classes/: BinderPlugin.h  BinderPlugin.m
ipc_0/lib/: main.dart
ipc_0/linux/: Makefile
ipc_extension/: README.md  pubspec.yaml
ipc_extension/example/: pubspec.yaml
ipc_extension/example/lib/: main.dart
ipc_extension/lib/: ipc_extension.cc  ipc_extension.dart  test.dart
ipc_extension/test/: ipc_extension_test.dart
ipc_extension_1/: Makefile  ipc_extension.dart  test.dart
ipc_extension_1/client-sdk/: displayServiceClient.h
plugin1/: README.md  pubspec.yaml
plugin1/android/: build.gradle  settings.gradle
plugin1/example/: README.md  pubspec.yaml
plugin1/example/lib/: main.dart
plugin1/example/linux/: app_configuration.mk  window_configuration.cc
plugin1/example/test/: widget_test.dart
plugin1/ffi/: Makefile  ffi.cc  ffi.h
plugin1/ios/: plugin1.podspec
plugin1/ios/Classes/: Plugin1Plugin.h  Plugin1Plugin.m  SwiftPlugin1Plugin.swift
plugin1/lib/: plugin1.dart
plugin1/linux/: plugin1_plugin.cc  plugin1_plugin.h  plugin_configuration.mk
plugin1/macos/: plugin1.podspec
plugin1/macos/Classes/: Plugin1Plugin.swift
plugin1/test/: plugin1_test.dart
plugin2/: README.md  pubspec.yaml
plugin2/android/: build.gradle  settings.gradle
plugin2/example/: README.md  pubspec.yaml
plugin2/example/lib/: main.dart
plugin2/example/linux/: app_configuration.mk  window_configuration.cc
plugin2/example/test/: widget_test.dart
plugin2/ios/: plugin2.podspec
plugin2/ios/Classes/: Plugin2Plugin.h  Plugin2Plugin.m  SwiftPlugin2Plugin.swift
plugin2/lib/: plugin2.dart
plugin2/linux/: plugin2_plugin.cc  plugin2_plugin.h  plugin_configuration.mk
plugin2/macos/: plugin2.podspec
plugin2/test/: plugin2_test.dart
(+48 files in other folders)
